force-app/main/default/objects/nFORCE__Test_Object__c/fields/nFORCE__Test_Dependent_Multiselect__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Test_Dependent_Multiselect__c</fullName>
    <description>Used in unit tests.</description>
    <inlineHelpText>Used in unit tests.</inlineHelpText>
    <label>Test Dependent Multiselect</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>nFORCE__Test_Picklist__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>