force-app/main/default/objects/nFORCE__Test_Object__c/fields/nFORCE__Test_Forms_Translate_Picklist__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Test_Forms_Translate_Picklist__c</fullName>
    <description>This field is for internal use only. It is used to test the TRANSLATE attribute on the FIELD token in forms. Some of the values are translated to ensure the correct value is returned in the unit testing.</description>
    <label>Test_Forms_Translate_Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>apple</fullName>
            </value>
            <value>
                <fullName>orange</fullName>
            </value>
            <value>
                <fullName>banana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>