force-app/main/default/objects/nFORCE__Test_Object__c/fields/nFORCE__Test_Highest__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Test_Highest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used for testing purposes only.</description>
    <label>Test Highest</label>
    <referenceTo>nFORCE__Test_Object__c</referenceTo>
    <relationshipLabel>Test Highests</relationshipLabel>
    <relationshipName>Test_Highests</relationshipName>
    <type>Lookup</type>
</CustomField>