force-app/main/default/objects/nFORCE__Test_Object__c/fields/nFORCE__Test_Parent__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Test_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used for testing purposes only.</description>
    <label>Test Parent</label>
    <referenceTo>nFORCE__Test_Object__c</referenceTo>
    <relationshipLabel>Test Parents</relationshipLabel>
    <relationshipName>Test_Parents</relationshipName>
    <type>Lookup</type>
</CustomField>