force-app/main/default/objects/nFORCE__Test_Object__c/fields/nFORCE__Test_Percent__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Test_Percent__c</fullName>
    <description>Used in unit tests.</description>
    <inlineHelpText>Used in unit tests.</inlineHelpText>
    <label>Test Percent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>