force-app/main/default/objects/nFORCE__Test_Object__c/fields/nFORCE__Test_Picklist_Default__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Test_Picklist_Default__c</fullName>
    <description>Test default picklist settings</description>
    <label>Test Picklist Default</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Selection1</fullName>
                <default>true</default>
                <label>Selection1</label>
            </value>
            <value>
                <fullName>Selection2</fullName>
            </value>
            <value>
                <fullName>Selection3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>