force-app/main/default/objects/nFORCE__Test_Object__c/fields/nFORCE__Test_Rich_Textarea__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Test_Rich_Textarea__c</fullName>
    <description>Used in unit tests.</description>
    <inlineHelpText>Used in unit tests.</inlineHelpText>
    <label>Test Rich Textarea</label>
    <length>256</length>
    <type>Html</type>
</CustomField>